<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false" translation_description="Application Title">Telescope.Touch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="go">Go!</string>
    <string name="location_prefs">Location settings</string>
    <string name="force_gps_pref">Always use GPS</string>
    <string name="no_use_gps_pref">Set location manually</string>
    <string name="no_use_gps_pref_hint">Pick a place on the map or enter the coordinates.</string>
    <string name="location_lat_pref">Latitude</string>
    <string name="location_long_pref">Longitude</string>
    <string name="degrees" translation_description="angular degrees">Degrees</string>
    <string name="preferences">preferences</string>
    <string name="location_offer_to_enable">Automatic location is disabled. Would you like to enable it?</string>
    <string name="location_offer_to_enable_gps_title">GPS disabled</string>
    <string name="location_set_auto">Location set from %1$s to %2$s</string>
    <string name="location_long_lat">Longitude: %1$f, latitude: %2$f</string>
    <string name="use_magnetic_correction">Use magnetic correction</string>
    <string name="stars">Stars</string>
    <string name="constellations">Constellations</string>
    <string name="messier_objects" translation_description="The celestial objects catalogued by Charles Messier">Messier Objects</string>
    <string name="solar_system">Solar System</string>
    <string name="show_grid_pref">RA/Dec Grid</string>
    <string name="horizon">Horizon</string>
    <string name="show_sky_gradient" translation_description="This is a shading of the color of the sky used for effect">Sky Gradient</string>
    <string name="show_meteors_pref">Meteor Showers</string>
    <string name="ecliptic">Ecliptic</string>
    <string name="malformed_loc_error">Latitude or longitude setting isn\'t a number.</string>
    <string name="menu_toggle_dim">Toggle night mode</string>
    <string name="zenith">ZENITH</string>
    <string name="nadir">NADIR</string>
    <string name="north">NORTH</string>
    <string name="east">EAST</string>
    <string name="west">WEST</string>
    <string name="south">SOUTH</string>
    <string name="north_short">N</string>
    <string name="south_short">S</string>
    <string name="east_short">E</string>
    <string name="west_short">W</string>
    <string name="search_label">Search the Sky</string>
    <string name="no_search_title">No results</string>
    <string name="no_search_results_text">No results were found.</string>
    <string name="many_search_results_title">Did you mean?</string>
    <string name="menu_time">Time Travel</string>
    <string name="time_travel_close_message">Back to the present…</string>
    <string name="popular_dates_prompt" translation_description="Label for a list of dates the user can choose from">Popular dates</string>
    <string name="custom_date_prompt" translation_description="Label telling the user to manually specify a date">Or select your own date:</string>
    <string name="change_date_prompt">Change the date</string>
    <string name="change_time_prompt">Change the time</string>
    <string name="now_visiting" translation_description="used in time travel dialog to tell the user what time they are visiting, time formatted as yyyy.mm.dd at hh.mm.ss + timezone">Now visiting: %s</string>
    <string name="time_travel_label_past" translation_description="Label showing that we are in the past">Time Travel: Past</string>
    <string name="time_travel_label_future" translation_description="Label showing that we are in the future">Time Travel: Future</string>
    <string name="time_travel_stopped" translation_description="Label showing rate of travel through time">Time travel frozen</string>
    <string name="time_travel_second_speed" translation_description="Label showing rate of travel through time.  The symbol means greater than.">Traveling &gt; @ 1 sec/sec</string>
    <string name="time_travel_minute_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 min/sec</string>
    <string name="time_travel_10minute_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 10 min/sec</string>
    <string name="time_travel_hour_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 hour/sec</string>
    <string name="time_travel_day_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 day/sec</string>
    <string name="time_travel_week_speed" translation_description="Label showing rate of travel through time">Traveling &gt; @ 1 week/sec</string>
    <string name="time_travel_second_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 sec/sec</string>
    <string name="time_travel_minute_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 min/sec</string>
    <string name="time_travel_10minute_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 10 min/sec</string>
    <string name="time_travel_hour_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 hour/sec</string>
    <string name="time_travel_day_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 day/sec</string>
    <string name="time_travel_week_speed_back" translation_description="Label showing rate of travel through time">Traveling &lt; @ 1 week/sec</string>
    <string name="sky_map_gallery">Sky Map Gallery</string>
    <string name="gallery_image_search_btn">Find in sky</string>
    <string name="search_overlay_title" translation_description="title for search overlay">Point your phone toward the arrow</string>
    <string name="search_target_looking_message" translation_description="displayed when a search target is being searched for">Looking for:</string>
    <string name="sun_wont_set_message">The sun will not set during the next 24 hours at your current location.</string>
    <string name="missing_label" translation_description="Used to indicate to the developer that they've added a resource with no translation.">MISSING_LBL</string>
    <string name="sun">Sun</string>
    <string name="moon">Moon</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="pluto">Pluto</string>
    <string name="crab_nebula" translation_description="hubble object">Crab Nebula</string>
    <string name="eagle_nebula" translation_description="hubble object">Eagle Nebula</string>
    <string name="andromeda_galaxy" translation_description="hubble object">Andromeda Galaxy</string>
    <string name="orion_nebula" translation_description="hubble object">Orion Nebula</string>
    <string name="whirlpool_galaxy" translation_description="hubble object">Whirlpool Galaxy</string>
    <string name="ring_nebula" translation_description="hubble object">Ring Nebula</string>
    <string name="pinwheel_galaxy" translation_description="hubble object">Pinwheel Galaxy</string>
    <string name="sombrero_galaxy" translation_description="hubble object">Sombrero Galaxy</string>
    <string name="hercules_gc" translation_description="hubble object">Hercules Globular Cluster</string>
    <string name="pleiades" translation_description="hubble object">Pleiades</string>
    <string name="cats_eye_nebula" translation_description="hubble object">Cat\'s Eye Nebula</string>
    <string name="omega_centauri" translation_description="hubble object">Omega Centauri Globular Cluster</string>
    <string name="v838_mon" translation_description="hubble object">V838 Monocerotis</string>
    <string name="hubble_deep_field" translation_description="hubble object">Hubble Deep Field</string>
    <string name="hdf" translation_description="hubble object" tools:keep="@string/hdf">Hubble Deep Field</string>
    <string name="menu_diagnostics">Diagnostics</string>
    <string name="north_pole">NP</string>
    <string name="south_pole">SP</string>
    <string name="andromeda" translation_description="Name of the Andromeda constellation" tools:keep="@string/andromeda">Andromeda</string>
    <string name="aquarius" translation_description="Name of the Aquarius constellation" tools:keep="@string/aquarius">Aquarius</string>
    <string name="aquila" translation_description="Name of the Aquila constellation" tools:keep="@string/aquila">Aquila</string>
    <string name="aries" translation_description="Name of the Aries constellation" tools:keep="@string/aries">Aries</string>
    <string name="sensor_reverse_preference_title">Reverse Magnetic Z</string>
    <string name="sensor_reverse_preference_summary">Fix for phones with incorrectly implemented sensors - requires restart</string>
    <string name="disable_gyro_preference_title">Disable gyroscope</string>
    <string name="disable_gyro_preference_summary">Not evert device has a gyro: if yours does then you\'ll get better results with it enabled. If it doesn\'t, Sky Map will probably not work if you uncheck this box.</string>
    <string name="rotate_horizon_preference_title">Rotate horizon</string>
    <string name="rotate_horizon_preference_summary">Rotate by 90 degree horizon (for screens with forced landscape, such as smartglasses)</string>
    <string name="connect">Connect</string>
    <string name="host_prompt">Host address</string>
    <string name="mount_goto">Go-To</string>
    <string name="go_to">Go to</string>
    <string name="sync">Sync</string>
    <string name="menu_about">About this app</string>
    <string name="focus_in">Focus in</string>
    <string name="focus_out">Focus out</string>
    <string name="stop_motion">Abort</string>
    <string name="absolute_position">Absolute position:</string>
    <string name="position">Position</string>
    <string name="focuser_control">Focuser control</string>
    <string name="speed">Speed:</string>
    <string name="steps_per_click">Steps per click:</string>
    <string name="compass">Compass and level</string>
    <string name="add_sky_map_shortcut">Add Sky Map shortcut</string>
    <string name="deep_sky">Deep sky</string>
    <string name="aladin_sky_atlas">Aladin Sky Atlas</string>
    <string name="cds_copyright">© Centre de Données astronomiques de Strasbourg, Unistra/CNRS.</string>
    <string name="aladin_welcome">Aladin is an interactive sky atlas developed by the Strasbourg astronomical Data Center. It uses HiPS (Hierarchical Progressive Surveys) technology.\nTelescope.Touch integrates an Aladin client, so you can see your targets with extremely high quality before pointing the telescope! You can also slew the telescope from the map or search from objects, thanks to the Sesame object resolver.</string>
    <string name="force_gps_pref_hint">The app normally uses cell phone antennas to calculate your position. You can force the use of GPS, but it will be slower.</string>
    <string name="connect_to_ssh">Connect to a SSH server:</string>
    <string name="port_hint">Port</string>
    <string name="username">Username</string>
    <string name="use_pem_key_file">Use PEM key file</string>
    <string name="password">Password</string>
    <string name="choose_pem_private_key">Choose PEM private key…</string>
    <string name="password_protected_key">Password-protected key</string>
    <string name="pem_password">PEM password</string>
    <string name="save_passwords">Save passwords</string>
    <string name="remote_file_manager">Remote file manager (SFTP)</string>
</resources>