<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="stardroid.preferences"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        android:title="@string/location_prefs"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="force_gps"
            android:summary="@string/force_gps_pref_hint"
            android:title="@string/force_gps_pref"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="no_auto_locate"
            android:summary="@string/no_use_gps_pref_hint"
            android:title="@string/no_use_gps_pref"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue=""
            android:dependency="no_auto_locate"
            android:key="location"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/location_placename_hint"
            android:title="@string/location_placename"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue="0"
            android:dependency="no_auto_locate"
            android:inputType="number|numberSigned|numberDecimal"
            android:key="latitude"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/degrees"
            android:title="@string/location_lat_pref"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:defaultValue="0"
            android:dependency="no_auto_locate"
            android:inputType="number|numberSigned|numberDecimal"
            android:key="longitude"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/degrees"
            android:title="@string/location_long_pref"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_magnetic_correction"
            android:title="@string/use_magnetic_correction"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sound_effects"
        android:title="@string/use_sound_effects"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:key="sensor_prefs"
        app:iconSpaceReserved="false"
        app:title="@string/sensor_prefs">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="disable_gyro"
            android:summary="@string/disable_gyro_preference_summary"
            android:title="@string/disable_gyro_preference_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="reverse_magnetic_z"
            android:summary="@string/sensor_reverse_preference_summary"
            android:title="@string/sensor_reverse_preference_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="rotate_horizon"
            android:summary="@string/rotate_horizon_preference_summary"
            android:title="@string/rotate_horizon_preference_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>