<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/menu_filter_stars"
            android:checkable="true"
            android:checked="true"
            android:title="@string/stars" />

        <item
            android:id="@+id/menu_filter_dso"
            android:checkable="true"
            android:checked="true"
            android:title="@string/deep_sky" />

        <item
            android:id="@+id/menu_filter_planets"
            android:checkable="true"
            android:checked="true"
            android:title="@string/solar_system" />
    </group>

    <item
        android:id="@+id/menu_skymap_gallery"
        android:orderInCategory="2"
        android:title="@string/menu_gallery"
        app:showAsAction="never" />
</menu>