<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/aladin"
        android:scaleType="centerInside"
        android:contentDescription="@string/aladin_sky_atlas" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aladin_sky_atlas"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/aladin_welcome"/>

    <ImageView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/cds_logo"
        android:contentDescription="@string/cds_copyright" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cds_copyright"/>
</LinearLayout>